--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,11 @@
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "dev:debug": "ts-node-dev --inspect=0.0.0.0:9229 --respawn --transpile-only src/index.ts",
     "build": "npx tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "migration:create": "typeorm migration:create src/app/shared/database/migrations/CreateTable",
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d ./src/main/config/database.config.ts",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/main/config/database.config.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ./src/main/config/database.config.ts"
   },
   "keywords": [],
   "author": "",
