--- a/web/package.json
+++ b/web/package.json
@@ -20,12 +20,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "react-text-mask": "^5.5.0",
     "socket.io-client": "^4.6.1",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-text-mask": "^5.4.11",
     "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
