--- a/web/package.json
+++ b/web/package.json
@@ -16,9 +16,13 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@redux-devtools/extension": "^3.2.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "entity-adapter": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-text-mask": "^5.5.0",
     "socket.io-client": "^4.6.1",
